RESOLVED FIXED190007
Regression(r236512): WKWebViewCandidateTests.SoftSpaceReplacementAfterCandidateInsertionWithoutReplacement API test is failing
https://bugs.webkit.org/show_bug.cgi?id=190007
Summary Regression(r236512): WKWebViewCandidateTests.SoftSpaceReplacementAfterCandida...
Chris Dumez
Reported 2018-09-26 13:17:28 PDT
WKWebViewCandidateTests.SoftSpaceReplacementAfterCandidateInsertionWithoutReplacement API test is failing since r236512: TestWebKitAPI.WKWebViewCandidateTests.SoftSpaceReplacementAfterCandidateInsertionWithoutReplacement /Volumes/Data/slave/highsierra-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewCandidateTests.mm:153 Expected equality of these values: "apple " [wkWebView stringByEvaluatingJavaScript:GetInputValueJSExpression] Which is: "apple "
Attachments
Patch (2.89 KB, patch)
2018-09-26 13:23 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-09-26 13:23:14 PDT
Chris Dumez
Comment 2 2018-09-26 15:18:30 PDT
Comment on attachment 350891 [details] Patch Clearing flags on attachment: 350891 Committed r236529: <https://trac.webkit.org/changeset/236529>
Chris Dumez
Comment 3 2018-09-26 15:18:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-09-26 15:19:44 PDT
Note You need to log in before you can comment on or make changes to this bug.